work section uploaded

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,7 +142,7 @@ svg.connect-svg {
 #work-pointer {
     /* border: 2px solid white; */
     position: relative;
-    top: 150px;
+    top: -100px;
 }
 
 
@@ -154,88 +154,65 @@ svg.connect-svg {
 /* ------------------------------------------------------------------------------------------------------------------------------------------ */
 .slider-container {
     width: 100%;
-    height: 80%;
-    border: 2px solid blue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100%;
+    margin: auto;
 }
 
 .slider-projects {
-    display: flex;
-    align-items: center;
-    gap: 21px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+    margin: auto;
 }
 
-.slider-projects img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px;
+@media (max-width: 1500px) {
+    .slider-projects {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3rem;
+        gap: 2rem;
+    }
+
+    
 }
+@media (max-width: 1024px) {
+    .slider-projects {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 3rem;
+        gap: 2rem;
+    }
+}
+@media (max-width: 320px) {
+
+}
+
+
+
+
+
 
 .slider-project {
-    width: 110px;
-    border-radius: 15px;
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/src/code.jpg);
+    background-size:  cover;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+    border-radius: 20px;
+    transition-duration: .5s;
+    text-align: justify;
     cursor: pointer;
-    position: relative;
-    transition: 0.7s ease;
 }
 
-.slider-projects .slider-project:first-child, .slider-projects .slider-project:last-child {
-    height: 480px;
-}
-.slider-projects .slider-project:nth-child(2), .slider-projects .slider-project:nth-child(6) {
-    height: 560px;
-}
-.slider-projects .slider-project:nth-child(3), .slider-projects .slider-project:nth-child(4), .slider-projects .slider-project:nth-child(5) {
-    height: 665px;
-}
-h3 {
-    font-size: 40px;
-    font-weight: 700;
-    text-align: left;
-    text-transform: uppercase;
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: -38%;
-    transform: rotate(270deg);
-    /* transition: 0.7s ease; */
-}
-
-.details {
-    position: absolute;
-    bottom: 43px;
-    left: 43px;
-    
-}
-.details h4 {
-    font-size: 26px;
-    font-weight: 700;
-    text-align: left;
-    line-height: 44px;
-    text-align: left;
-    /* transition: 0.7s ease; */
-    display: none;
-    margin-bottom: 10px;
-}
-.details p {
-    font-size: 20px;
-    font-weight: 700;
-    text-align: left;
-    line-height: 33px;
-    text-align: left;
-    /* transition: 0.7s ease; */
-    display: none;
-    
-}
 .details ul {
-    margin: 20px 0px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-auto-flow: column;
     list-style: none;
-    text-align: left;
-    display: none;
+    margin-bottom: 30px;
+    gap: 1rem;
 }
+
 .details a {
     text-align: center;
     text-decoration: none;
@@ -244,38 +221,38 @@ h3 {
     padding: 10px;
     border-radius: 15px;
     transition-duration: .5s;
-    display: none;
 }
-
 .details a:hover {
     box-shadow: rgba(123, 123, 132, 0.335) 0px 7px 29px 0px;
     transition-duration: .5s;
 }
 
-.slider-project.active {
-    width: 766px !important;
-    height: 750px !important;
-
+.slider-project h3 {
+    font-size: 40px;
+    margin-bottom: 15px;
+    max-width: 80%;
 }
 
-.slider-project.active h3 {
-    display: none;
+.details h4 {
+    font-size: 30px;
+    margin-bottom: 15px;
 }
 
-.slider-project.active .details h4, .slider-project.active .details p, .slider-project.active .details a {
-    display: block;
+.details p {
+    font-size: 20px;
+    margin-bottom: 15px;
 }
 
-.slider-project.active .details ul {
-    display: flex;
-    justify-content: flex-start;
-    gap: 15px;
+.slider-project:hover {
+    box-shadow: rgba(65, 65, 71, 0.335) 0px 7px 29px 0px;
+    transition-duration: .5s;
+    transform: scale(1.03);
 }
 
-
-
-
-
+.details {
+    max-width: 100%;
+    
+}
 
 
 
@@ -320,7 +297,7 @@ h3 {
 
 #stack-section {
     width: 60%;
-    height: 100vh;
+    min-height: 100vh;
     margin: auto;
     border: 2px solid white;
     align-content: center;
@@ -329,16 +306,18 @@ h3 {
 
 #work-section {
     width: 85%;
-    height: 100vh;
-    margin: auto;
+    min-height: 90vh;
+    margin: 0;
+
     border: 2px solid white;
     align-content: center;
     text-align: center;
+    margin: auto;
 }
 
 #connect-section {
     width: 70%;
-    height: 100vh;
+    min-height: 90vh;
     margin: auto;
     border: 2px solid white;
     align-content: center;
