--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    
     border: none !important;
 }
 body { 
@@ -93,6 +94,10 @@ svg.connect-svg {
     transition-duration: .5s;
     border-radius: 25px;
 }
+
+
+
+
 #connect-section > h2 {
     font-size: 60px;
     margin: 60px 0px;
@@ -152,6 +157,8 @@ svg.connect-svg {
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------ */
+/* WORK SECTION STYLE */
+
 .slider-container {
     width: 100%;
     height: 100%;
@@ -164,33 +171,6 @@ svg.connect-svg {
     gap: 3rem;
     margin: auto;
 }
-
-@media (max-width: 1500px) {
-    .slider-projects {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 3rem;
-        gap: 2rem;
-    }
-
-    
-}
-@media (max-width: 1024px) {
-    .slider-projects {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 3rem;
-        gap: 2rem;
-    }
-}
-@media (max-width: 320px) {
-
-}
-
-
-
-
-
 
 .slider-project {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/src/code.jpg);
@@ -259,7 +239,254 @@ svg.connect-svg {
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------ */
+/* MEDIA QUERIES */
 
+@media (max-width: 380px) {
+    #navbar {
+        background: linear-gradient(#0e1c43, #131519);
+        box-shadow: rgba(123, 123, 132, 0.098) 0px 7px 29px 0px;
+        padding: 3vh 8vw;
+    }
+    .navbar-links {
+        display: none; 
+    }
+    #section-link {
+        font-size: 20px;
+        font-weight: 100;
+        text-decoration: none;
+        transition-duration: .5s;
+        padding: 0;
+    }
+    #section-link:hover {
+        transform: scale(1.1);
+        transition-duration: .5s;
+    }
+    #section-links {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    #welcome-section > p {
+        font-size: 16px;
+    }
+    h1 {
+        font-size: 40px;
+        margin-bottom: 15px;
+    }
+    #welcome-section {
+        width: 80%;
+        height: 100vh;
+        margin: 0 auto;
+        text-align: center;
+        align-content: center;
+        border: 2px solid white;
+    }
+    #welcome-section > p {
+        font-size: 16px;
+    }
+
+    #stack-section {
+        width: 100%;
+    }
+    svg {
+        width: 2rem;
+        height: 2rem;
+        transition-duration: .5s;
+    }
+    .list-skill-stack > li {
+        padding: 0 5px;
+    }
+    .list-skill-stack.last {
+        margin-bottom: 75px;
+    }
+    #resume {
+        font-size: 16px;
+    }
+    #stack-section > h2 {
+        font-size: 30px;
+    }
+    #work-section > h2 {
+        font-size: 30px;
+    }
+    #connect-section > h2 {
+        font-size: 30px;
+    }
+    #resume:hover {
+        font-size: 18px;
+    }
+    #connect-section {
+        width: 90%;
+    }
+    #connect-section {
+        font-size: 16px;
+    }
+    #connect-list > li {
+        padding: 0 5px; 
+    }
+    svg.connect-svg {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 13px;
+    }
+    #connect-list > li > a > svg:hover {
+        transform: scale(1.1);
+    }
+    .slider-projects {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .slider-project {
+        text-align: left;
+    }
+    .details ul {
+        grid-template-columns: repeat(4, 1fr);
+        grid-auto-flow: row;
+        gap: 0.5rem;
+    }
+
+    .details a {
+        font-size: 16px;
+        border-radius: 10px;
+        transition-duration: .5s;
+    }
+
+    .slider-project h3 {
+        font-size: 25px;
+        max-width: 100%;
+    }
+
+    .details h4 {
+        font-size: 20px;
+    }
+
+    .details p {
+        font-size: 16px;
+    }
+
+}
+
+@media (min-width: 381px) and (max-width: 768px) {
+    #navbar {
+        background: linear-gradient(#0e1c43, #131519);
+        box-shadow: rgba(123, 123, 132, 0.098) 0px 7px 29px 0px;
+        padding: 3vh 8vw;
+    }
+    .navbar-links {
+        display: none; 
+    }
+    #section-link {
+        font-size: 30px;
+        font-weight: 100;
+        text-decoration: none;
+        transition-duration: .5s;
+        padding: 0;
+    }
+    #section-link:hover {
+        transform: scale(1.1);
+        transition-duration: .5s;
+    }
+    #section-links {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    h1 {
+        font-size: 50px;
+        margin-bottom: 15px;
+    }
+
+    #welcome-section > p {
+        font-size: 16px;
+    }
+
+    #stack-section {
+        width: 100%;
+    }
+    svg {
+        width: 3rem;
+        height: 3rem;
+        transition-duration: .5s;
+    }
+    .list-skill-stack > li {
+        padding: 0 7px;
+    }
+    .list-skill-stack.last {
+        margin-bottom: 75px;
+    }
+    #resume {
+        font-size: 18px;
+    }
+    #stack-section > h2 {
+        font-size: 35px;
+    }
+    #work-section > h2 {
+        font-size: 35px;
+    }
+    #connect-section > h2 {
+        font-size: 35px;
+    }
+    #resume:hover {
+        font-size: 20px;
+    }
+    #connect-section {
+        width: 90%;
+    }
+    #connect-section {
+        font-size: 16px;
+    }
+    #connect-list > li {
+        padding: 0 10px; 
+    }
+    svg.connect-svg {
+        width: 4rem;
+        height: 4rem;
+        border-radius: 16px;
+    }
+    #connect-list > li > a > svg:hover {
+        transform: scale(1.1);
+    }
+    .slider-projects {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .slider-project {
+        text-align: left;
+    }
+    .details ul {
+        grid-template-columns: repeat(5, 1fr);
+        grid-auto-flow: row;
+        gap: 0.5rem;
+    }
+    .details a {
+        font-size: 18px;
+        border-radius: 10px;
+        transition-duration: .5s;
+    }
+    .slider-project h3 {
+        font-size: 28px;
+        max-width: 100%;
+    }
+    .details h4 {
+        font-size: 23px;
+    }
+    .details p {
+        font-size: 17px;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    
+    
+}
+
+@media (max-width: 1280px) {
+    
+}
+
+@media (max-width: 1680px) {
+    
+}
 
 
 
