--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,7 +212,7 @@ svg.connect-svg {
 }
 
 .slider-project {
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/src/code.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(https://www.ekreative.com/wp-content/uploads/2021/03/pankaj-patel-_SgRNwAVNKw-unsplash.jpg);
     background-size:  cover;
     width: 100%;
     height: 100%;
